@@ -1,3 +1,8 @@
+Tue Dec 21 06:00:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* filestack.c (File_GetLine): Support continuation lines.
+	* regression/tests_pass/long_line.s: Added.
+
 Tue Dec 21 05:32:48 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* decode.c (oDecodeTable): Add ORG.
